Update swagger docs for list controllers
