# api/docs/swagger.json
@@ -254,6 +254,26 @@
                     "eras"
                 ],
                 "summary": "Retrieve a list of eras",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter eras by name",
+                        "name": "private",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Limit the number of connects returned",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Number of connects to skip for pagination",
+                        "name": "skip",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Eras retrieved successfully",
@@ -709,18 +729,6 @@
                     },
                     {
                         "type": "string",
-                        "description": "Limit the number of users returned",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Number of users to skip for pagination",
-                        "name": "skip",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "Filter users by username",
                         "name": "username",
                         "in": "query"
@@ -735,6 +743,18 @@
                         "type": "string",
                         "description": "Filter users by role ID",
                         "name": "role_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Limit the number of users returned",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Number of users to skip for pagination",
+                        "name": "skip",
                         "in": "query"
                     }
                 ],
